tests/paczka1/fuzzy1/40162642.err
Error in line 1: yIPQAtys A376 81,5
Error in line 3: vowjrFW92yF A982 88,9
Error in line 4: yIPQAtys A982 43,2
Error in line 9: icOqBcHctBo A306 56,4
Error in line 12: A306 A376 5,2
Error in line 18: 2BHVMUvY A376 87,9
Error in line 17: vowjrFW92yF A982 43,1
Error in line 36: vowjrFW92yF A306 25,6
Error in line 38: HdMNV4dJPb1 A982 38,1
